--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "M's blog",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "NODE_OPTIONS=--openssl-legacy-provider vuepress build docs"
   },
   "main": "index.js",
   "author": "houjiazong",
